--- a/programs.cfg
+++ b/programs.cfg
@@ -8,7 +8,7 @@
         },
         version = "1.1.12",
         name = "Yet Another Widget Library (Enhanced)",
-        description = "An enhanced fork of YAWL, a Widget based GUI library made by AR2000 that takes advantage of GPU VRAM buffering added in OpenComputers 1.7.6 for more advanced GUIs.";
+        description = "An enhanced fork of YAWL, a Widget-based GUI library made by AR2000 that takes advantage of GPU VRAM buffering added in OpenComputers 1.7.6 for more advanced GUIs.";
         authors = "AR2000AR,Renno231",
         repo = "tree/master/yawl-e"
     },
