added ECC compatibility for OPPM

--- a/programs.cfg
+++ b/programs.cfg
@@ -13,4 +13,15 @@
         repo = "tree/master/yawl-e"
     },
   
+    ["ecc"] = {
+            files = {
+                [":master/ecc/lib"] = "/lib"
+                [":master/ecc/man"] = "/man"
+            },
+            version = "1.0.0",
+            name = "ECC (Elliptic Curve Cryptography)",
+            description = "Elliptic Curve Cryptography library OpenComputers port for network security protocols like ECDH (Elliptic-curve Diffie–Hellman)";
+            authors = "Renno231",
+            repo = "tree/master/ecc"
+        },
 }
