--- a/programs.cfg
+++ b/programs.cfg
@@ -9,7 +9,7 @@
         version = "3.1.12",
         name = "Yet Another Widget Library (Enhanced)",
         description = "An enhanced fork of YAWL, a Widget-based GUI library made by AR2000 that takes advantage of GPU VRAM buffering added in OpenComputers 1.7.6 for more advanced GUIs.";
-        authors = "AR2000AR,Renno231",
+        authors = "Renno231, AR2000AR",
         repo = "tree/master/yawl-e"
     },
   
