--- a/programs.cfg
+++ b/programs.cfg
@@ -15,7 +15,7 @@
   
     ["ecc"] = {
             files = {
-                [":master/ecc/lib"] = "/lib"
+                [":master/ecc/lib"] = "/lib",
                 [":master/ecc/man"] = "/man"
             },
             version = "1.0.0",
