made nodemap oppm compatible

--- a/programs.cfg
+++ b/programs.cfg
@@ -24,4 +24,16 @@
             authors = "Renno231",
             repo = "tree/master/ecc"
         },
+
+    ["nodemap"] = {
+        files = {
+            [":master/nodemap/lib"] = "/lib",
+            [":master/nodemap/man"] = "/man"
+        },
+        version = "1.0.0",
+        name = "Nodemap",
+        description = "A nodemap utility for pathfinding that can create, save, and import maps of nodes (x,y,z,name).";
+        authors = "Renno231",
+        repo = "tree/master/ecc"
+    },
 }
