added nodemap test script

--- a/programs.cfg
+++ b/programs.cfg
@@ -28,7 +28,8 @@
     ["nodemap"] = {
         files = {
             [":master/nodemap/lib"] = "/lib",
-            [":master/nodemap/man"] = "/man"
+            [":master/nodemap/man"] = "/man",
+            [":master/nodemap/bin"] = "/bin"
         },
         version = "1.0.0",
         name = "Nodemap",
