added lzss and ebake

--- a/programs.cfg
+++ b/programs.cfg
@@ -37,4 +37,26 @@
         authors = "Renno231",
         repo = "tree/master/ecc"
     },
+
+    ["ebake"] = {
+        files = {
+            [":master/ebake/bin"] = "/bin"
+        },
+        version = "1.0.0",
+        name = "EepromBaker",
+        description = "A binfile utility using a mini-lzss decompressor to create bios files. Usage: ebake ChunkNameHere < /path/to/input/file.lua > /path/to/bios.lua Credit: lunar_sam.";
+        authors = "Renno231",
+        repo = "tree/master/ecc"
+    },
+
+    ["lzss"] = {
+        files = {
+            [":master/lzss/lib"] = "/lib"
+        },
+        version = "1.0.0",
+        name = "LZSS encoder/decoder library",
+        description = "Lossless data compression library. Credit: unknown";
+        authors = "Renno231",
+        repo = "tree/master/ecc"
+    },
 }
