OPPM program cfg update and bugfix (oops)

--- a/programs.cfg
+++ b/programs.cfg
@@ -35,7 +35,7 @@
         name = "Nodemap",
         description = "A nodemap utility for pathfinding that can create, save, and import maps of nodes (x,y,z,name).";
         authors = "Renno231",
-        repo = "tree/master/ecc"
+        repo = "tree/master/nodemap"
     },
 
     ["ebake"] = {
@@ -46,7 +46,7 @@
         name = "EepromBaker",
         description = "A binfile utility using a mini-lzss decompressor to create bios files. Usage: ebake ChunkNameHere < /path/to/input/file.lua > /path/to/bios.lua Credit: lunar_sam.";
         authors = "Renno231",
-        repo = "tree/master/ecc"
+        repo = "tree/master/ebake"
     },
 
     ["lzss"] = {
@@ -57,6 +57,17 @@
         name = "LZSS encoder/decoder library",
         description = "Lossless data compression library. Credit: unknown";
         authors = "Renno231",
-        repo = "tree/master/ecc"
+        repo = "tree/master/lzss"
+    },
+
+    ["tnet"] = {
+        files = {
+            [":master/tnet/lib"] = "/lib"
+        },
+        version = "1.0.0",
+        name = "TNET",
+        description = "TNET is the transport layer of the network stack that is connection oriented and has packet fragmentation. The API library is built ontop of that for creating easy simple applications with simplified syntax";
+        authors = "Renno231",
+        repo = "tree/master/tnet"
     },
 }
