added screens to oppm cfg
probably didn't do that right either

--- a/programs.cfg
+++ b/programs.cfg
@@ -70,4 +70,16 @@
         authors = "Renno231",
         repo = "tree/master/tnet"
     },
+
+    ["screens"] = {
+        files = {
+            [":master/screens/lib"] = "/lib"
+            [":master/screens/bin"] = "/bin"
+        },
+        version = "1.0.0",
+        name = "MultiScreen",
+        description = "";
+        authors = "Renno231",
+        repo = "tree/master/screens"
+    },
 }
