--- a/programs.cfg
+++ b/programs.cfg
@@ -73,7 +73,7 @@
 
     ["screens"] = {
         files = {
-            [":master/screens/lib"] = "/lib"
+            [":master/screens/lib"] = "/lib",
             [":master/screens/bin"] = "/bin"
         },
         version = "1.0.0",
